#18627 closed bug (fixed)

"Favorites" menu items in filepanel don't work

Reported by: pulkomandy Owned by: pulkomandy
Priority: normal Milestone: R1/beta5
Component: Kits/libtracker.so Version: R1/beta4
Keywords: regression Cc:
Blocked By: Blocking:
Platform: All

Description

Filepanels have a "Favorites" menu where you can quickly access recently open files.

It does not work anymore: clicking an item in that menu should instantly open it, but it does nothing at all.

Change History (3)

comment:2 by pulkomandy, 10 months ago

Owner: changed from nobody to pulkomandy
Status: newin-progress

comment:3 by waddlesplash, 10 months ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev57689.

Note: See TracTickets for help on using tickets.